--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@
       </div>
     </div>
   </section>
-
-  <!-- ================= LANCHES TRADICIONAIS ================= -->
+<!-- ================= LANCHES TRADICIONAIS ================= -->
   <section class="menu-section">
     <h2>🍔 Nossos Lanches Tradicionais</h2>
     <div class="grid">
       <div class="card" data-name="Bão" data-price="11.00">
         <img src="imagens/bao.png" alt="Bão">
-        <h3>Bão <span class="badge">Com Molho Verde</span></h3>
+        <h3>Bão <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 11,00</p>
         <p>Pão, hambúrguer, alface, tomate, presunto e mussarela.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -120,7 +119,7 @@
 
       <div class="card" data-name="Uai" data-price="13.00">
         <img src="imagens/uai.png" alt="Uai">
-        <h3>Uai <span class="badge">Com Molho Verde</span></h3>
+        <h3>Uai <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 13,00</p>
         <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -128,7 +127,7 @@
 
       <div class="card" data-name="Trem" data-price="14.00">
         <img src="imagens/trem.png" alt="Trem">
-        <h3>Trem <span class="badge">Com Molho Verde</span></h3>
+        <h3>Trem <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 14,00</p>
         <p>Pão, hambúrguer, salsicha, bacon, milho e queijo.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -142,25 +141,25 @@
     <div class="grid">
       <div class="card" data-name="Peleja" data-price="26.00">
         <img src="imagens/peleja.png" alt="Peleja">
-        <h3>Peleja <span class="badge">Com Molho Verde</span></h3>
+        <h3>Peleja <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 26,00</p>
-        <p>Pão, hambúrguer artesanal, filé de frango, bacon, milho, batata palha, alface, tomate, presunto e mussarela.</p>
+        <p>Pão, hambúrguer artesanal, filé de frango, bacon, milho, batata palha.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Tudibom" data-price="28.50">
         <img src="imagens/tudibom.png" alt="Tudibom">
-        <h3>Tudibom <span class="badge">Com Molho Verde</span></h3>
+        <h3>Tudibom <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 28,50</p>
-        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas.</p>
+        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Custoso" data-price="31.00">
         <img src="imagens/custoso.png" alt="Custoso">
-        <h3>Custoso <span class="badge">Com Molho Verde</span></h3>
+        <h3>Custoso <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 31,00</p>
-        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 cheddar.</p>
+        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
@@ -172,56 +171,125 @@
     <div class="grid">
       <div class="card" data-name="Nigucim" data-price="10.00">
         <img src="imagens/nigucim.png" alt="Nigucim">
-        <h3>Nigucim <span class="badge">Com Molho Verde</span></h3>
+        <h3>Nigucim <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 10,00</p>
-        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, ketchup e maionese.</p>
+        <p>Pão, molho, salsicha, milho, batata palha.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Simprão" data-price="12.00">
         <img src="imagens/simprao.png" alt="Simprão">
-        <h3>Simprão <span class="badge">Com Molho Verde</span></h3>
+        <h3>Simprão <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 12,00</p>
-        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese.</p>
+        <p>Pão, molho, salsicha, milho, batata palha, bacon.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Purizin" data-price="14.00">
         <img src="imagens/purizin.png" alt="Purizin">
-        <h3>Purizin <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
+        <h3>Purizin <span class="badge-small">Com Molho Verde</span> <span class="badge-small pure">Com Purê</span></h3>
         <p class="price">R$ 14,00</p>
-        <p>Pão, molho, purê de batata cremoso, 1 salsicha, milho, batata palha, ketchup e maionese.</p>
+        <p>Pão, molho, purê de batata cremoso, salsicha, milho.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Trembão" data-price="17.00">
         <img src="imagens/trembao.png" alt="Trembão">
-        <h3>Trembão <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
+        <h3>Trembão <span class="badge-small">Com Molho Verde</span> <span class="badge-small pure">Com Purê</span></h3>
         <p class="price">R$ 17,00</p>
-        <p>Pão, molho, purê de batata cremoso, 2 salsichas, bacon crocante, mussarela, batata palha, vinagrete, ketchup e maionese.</p>
+        <p>Pão, molho, purê de batata cremoso, 2 salsichas, bacon.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
   </section>
 
-  <!-- ================= BEBIDAS (SEM IMAGENS) ================= -->
+  <!-- ================= BEBIDAS ================= -->
   <section id="bebidas-section" class="menu-section">
     <h2>🥤 Bebidas</h2>
     <div class="grid">
-      <div class="card" data-name="Coca-Cola 200ml" data-price="4.00"><h3>Coca-Cola 200ml</h3><p><b>R$ 4,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Coca-Cola 310ml" data-price="5.00"><h3>Coca-Cola 310ml</h3><p><b>R$ 5,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Coca-Cola 310ml Zero" data-price="5.00"><h3>Coca-Cola 310ml Zero</h3><p><b>R$ 5,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Del Valle Uva 450ml" data-price="5.00"><h3>Del Valle Uva 450ml</h3><p><b>R$ 5,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Del Valle Laranja 450ml" data-price="5.00"><h3>Del Valle Laranja 450ml</h3><p><b>R$ 5,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Fanta 1L" data-price="8.00"><h3>Fanta 1L</h3><p><b>R$ 8,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Coca-Cola 1L" data-price="9.00"><h3>Coca-Cola 1L</h3><p><b>R$ 9,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Coca-Cola 1L Zero" data-price="9.00"><h3>Coca-Cola 1L Zero</h3><p><b>R$ 9,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Kuat 2L" data-price="10.00"><h3>Kuat 2L</h3><p><b>R$ 10,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
-      <div class="card" data-name="Coca-Cola 2L" data-price="13.00"><h3>Coca-Cola 2L</h3><p><b>R$ 13,00</b></p><div class="actions"><button class="add-cart">Adicionar</button></div></div>
+      <div class="card" data-name="Coca-Cola 200ml" data-price="4.00">
+        <h3>Coca-Cola 200ml</h3>
+        <p><b>R$ 4,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Del Valle Uva 450ml" data-price="5.00">
+        <h3>Del Valle Uva 450ml</h3>
+        <p><b>R$ 5,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Del Valle Laranja 450ml" data-price="5.00">
+        <h3>Del Valle Laranja 450ml</h3>
+        <p><b>R$ 5,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Coca-Cola 310ml" data-price="5.50">
+        <h3>Coca-Cola 310ml</h3>
+        <p><b>R$ 5,50</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Coca-Cola 310ml Zero" data-price="5.50">
+        <h3>Coca-Cola 310ml Zero</h3>
+        <p><b>R$ 5,50</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Fanta 1L" data-price="8.00">
+        <h3>Fanta 1L</h3>
+        <p><b>R$ 8,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Coca-Cola 1L" data-price="9.00">
+        <h3>Coca-Cola 1L</h3>
+        <p><b>R$ 9,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Coca-Cola 1L Zero" data-price="9.00">
+        <h3>Coca-Cola 1L Zero</h3>
+        <p><b>R$ 9,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Kuat Guaraná 2L" data-price="10.00">
+        <h3>Kuat Guaraná 2L</h3>
+        <p><b>R$ 10,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+      <div class="card" data-name="Coca-Cola 2L" data-price="13.00">
+        <h3>Coca-Cola 2L</h3>
+        <p><b>R$ 13,00</b></p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
     </div>
   </section>
+<!-- ================= MODAL DE ADICIONAIS ================= -->
+  <div id="extras-modal" class="modal">
+    <div class="modal-content">
+      <div class="modal-head">
+        <h3>Adicionais</h3>
+        <button class="extras-close">✖</button>
+      </div>
+      <div class="extras-list"></div>
+      <div class="modal-foot">
+        <button id="extras-confirm" class="btn-primary">Adicionar ao Pedido</button>
+        <button class="btn-secondary extras-close">Cancelar</button>
+      </div>
+    </div>
+  </div>
 
-  <!-- ================= LOGIN ================= -->
+  <!-- ================= MODAL DE REFRIGERANTE ================= -->
+  <div id="combo-modal" class="modal">
+    <div class="modal-content">
+      <div class="modal-head">
+        <h3>Escolher Refrigerante</h3>
+        <button class="combo-close">✖</button>
+      </div>
+      <div id="combo-body"></div>
+      <div class="modal-foot">
+        <button id="combo-confirm" class="btn-primary">Confirmar</button>
+        <button class="btn-secondary combo-close">Cancelar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- ================= MODAL DE LOGIN ================= -->
   <div id="login-modal" class="modal">
     <div class="modal-content login-box">
       <div class="modal-head">
