Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -109,27 +109,84 @@
   <section class="menu-section">
     <h2>🍔 Nossos Lanches Tradicionais</h2>
     <div class="grid">
+      <!-- BÃO -->
       <div class="card" data-name="Bão" data-price="11.00">
         <img src="imagens/bao.png" alt="Bão">
         <h3>Bão <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 11,00</p>
-        <p>Pão, hambúrguer, alface, tomate, presunto e mussarela.</p>
+        <p>Pão, hambúrguer, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
+      <!-- UAI -->
       <div class="card" data-name="Uai" data-price="13.00">
         <img src="imagens/uai.png" alt="Uai">
         <h3>Uai <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 13,00</p>
-        <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela.</p>
+        <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
+      <!-- TREM -->
       <div class="card" data-name="Trem" data-price="14.00">
         <img src="imagens/trem.png" alt="Trem">
         <h3>Trem <span class="badge-small">Com Molho Verde</span></h3>
         <p class="price">R$ 14,00</p>
-        <p>Pão, hambúrguer, salsicha, bacon, milho e queijo.</p>
+        <p>Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- CADIM -->
+      <div class="card" data-name="Cadim" data-price="17.00">
+        <img src="imagens/cadim.png" alt="Cadim">
+        <h3>Cadim <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 17,00</p>
+        <p>Pão, hambúrguer, 1 filé frango, bacon, milho, salsicha, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- ARMARIA -->
+      <div class="card" data-name="Armaria" data-price="18.00">
+        <img src="imagens/armaria.png" alt="Armaria">
+        <h3>Armaria <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 18,00</p>
+        <p>Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha, alface, tomate, salsicha, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- BITELA -->
+      <div class="card" data-name="Bitela" data-price="22.00">
+        <img src="imagens/bitela.png" alt="Bitela">
+        <h3>Bitela <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 22,00</p>
+        <p>Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, alface, salsicha, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- APRUMA -->
+      <div class="card" data-name="Apruma" data-price="25.00">
+        <img src="imagens/apruma.png" alt="Apruma">
+        <h3>Apruma <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 25,00</p>
+        <p>Pão, 3 hambúrgueres, filé frango, bacon, salsicha, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- GRADICIDO -->
+      <div class="card" data-name="Gradicido" data-price="28.00">
+        <img src="imagens/gradicido.png" alt="Gradicido">
+        <h3>Gradicido <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 28,00</p>
+        <p>Pão, 3 hambúrgueres, filé frango, bacon, ovo, 1 salsicha, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+      </div>
+
+      <!-- VARADIFOME -->
+      <div class="card" data-name="Varadifome" data-price="30.00">
+        <img src="imagens/varadifome.png" alt="Varadifome">
+        <h3>Varadifome <span class="badge-small">Com Molho Verde</span></h3>
+        <p class="price">R$ 30,00</p>
+        <p>Pão, 4 hambúrgueres, filé frango, bacon, ovo, cheddar, milho, batata palha, 2 salsichas, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
