Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
   </footer>
 
-  <button id="orders-fab" class="fab" type="button" style="display: none;">
+  <button id="orders-fab" class="fab" type="button">
     Meus Pedidos
   </button>
 
