Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -218,5 +218,13 @@
     Meus Pedidos
   </button>
 
+  <div id="cookie-banner">
+    <p>
+      Usamos cookies para garantir que você tenha a melhor experiência em nosso site.
+      <a href="Politica-privacidade.html" target="_blank">Saiba mais</a>.
+    </p>
+    <button id="cookie-accept" type="button">Aceitar</button>
+  </div>
+
 </body>
 </html>
